# styx

./: .gitignore  README.md
.github/: rust-ci.yml
.github/workflows/: rust.yml
charon/: Cargo.toml  channels.json
charon/src/: main.rs
lapin-server/: index.js  package-lock.json  package.json
lapin-server/components/: ServoController.js
lapin-server/components/monitoring/: FluxMonitoring.js
lapin-server/hooks/: useSocket.js
lapin-server/mq/: read.js  write.js
lapin-server/pages/: index.js
novasm/: Cargo.toml  upload.sh
novasm/.cargo/: config.toml
phlegyas/: index.js  package-lock.json  package.json  server.js  tailwind.config.js  tsconfig.json
phlegyas/app/: page.tsx
phlegyas/components/: BotDisplay.js  FluxMonitoring.js  NavBar.js  NavBar.tsx  ServoController.js
phlegyas/config/: channels.json
phlegyas/hooks/: useInterval.js  useInterval.ts  useSocket.ts
phlegyas/mq/: connector.js
phlegyas/pages/: _app.js  _document.js
phlegyas/styles/: theme.js
src/: main.rs
