[package]
name = "charon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
cargo-watch = "8.4.0"
gpio = "0.4.1"
i2cdev = "0.5.1"
lapin = "2.1.1"
tokio = { version = "1", features = ["full"] }
tokio-executor-trait = "2.1.1"
tokio-reactor-trait = "1.1.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
